# WeatherBasedRecommender

./: LICENSE  README.md  codecov.yml  docker-compose.yaml  generate_local_env.sh  hours.md
docs/: ci-cd.md  (+8 more)
recommender-back/: .gitignore  .pylintrc  Dockerfile  README.md  api.py  app.py  gunicorn_config.py  install_eccodes.sh  pyproject.toml  tasks.py
recommender-back/src/: app.py  cache_manager.py  celery.py  celery_worker.py  config.py  db.py  models.py  pois.json  routes.py  sprint1pois.json
recommender-back/src/apis/: algotunetest.py  aqi.py  current.py  db.py  forecast.py  helpers.py  manager.py  models.py  pathing.py  poi.py  poi_coords.json  time_data.py  times.py  utils.py  weather.py
recommender-back/src/apis/poi_data/: sports.json  things_to_do.json
recommender-back/src/db/: db.py  models.py
recommender-back/src/services/: api_fetcher.py  forecastdatafetcher.py  log_scores.py  poi_init.py  tasks.py
recommender-back/src/services/scoring/: indoor_scorer.py  outdoor_scorer.py
recommender-back/src/static/: algotunetest.py  pois.json  scoring_plot_local.py
recommender-back/src/tests/: mock_data.py  routes_test.py
recommender-back/src/tests/apis/: aqi_test.py  current_test.py  forecast_test.py  helpers_test.py  manager_test.py  pathing_test.py  poi_test.py  times_test.py  weather_test.py
recommender-back/src/tests/db/: db_test.py  models_test.py
recommender-back/src/tests/services/: api_fetcher_test.py  data_fetcher_test.py  forecastdatafetcher_test.py  log_scores_test.py
recommender-back/tests/: back_api_test.py  test_api.py  test_app.py
(+100 files in other folders)
