[tool.poetry]
name = "recommender-back"
version = "0.1.0"
description = ""
authors = ["ruusukivi <ruusukivi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
fmiopendata = {git = "https://github.com/pnuu/fmiopendata.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
